Overall structure of projects and skills section completed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>VISUAL STORYTELLING</h1>
     </div>
     
-    <div id="fixed-image"></div>
+    <div id="card"></div>
     
     <div id="main">
 
@@ -120,41 +120,130 @@
                 <div id="red-dot"></div>
                 <h6 id="title">Projects</h6>
             </div>
+
             <div id="elem-container">
-                <div id="elem1" class="elem"
-                    data-image="#">
+                <div id="elem1" class="elem">
                     <div class="overlay"></div>
-                    <h2>Project-1</h2>
+                    <h2 id="showCard">Personal Portfolio Website</h2>
                 </div>
-                <div class="elem"
-                    data-image="#">
-                    <div class="overlay"></div>
-                    <h2>Project-2</h2>
+                <div class="card" id="card1">
+                    <div class="card-header">
+                        <h2>Dev Discuss</h2>
+                        <span id="closeCard" class="close-btn">&times;</span>
+                    </div>
+
+                    <div class="card-body">
+                        <img src="path/to/your/image.png">
+                        <p>
+                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                        </p>
+                        <div class="features">
+                            <span>Authentication</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="tags">
+                            <span class="tag">Next Js</span>
+                        </div>
+                        <div class="actions">
+                            <a href="https://github.com" class="btn github">Github</a>
+                            <a href="#" class="btn tour">Take a tour</a>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="elem"
-                    data-image="#">
+
+                <div id="elem2" class="elem">
                     <div class="overlay"></div>
-                    <h2>Project-3</h2>
+                    <h2 id="showCard">Personal Portfolio Website</h2>
                 </div>
-                <div class="elem"
-                    data-image="#">
-                    <div class="overlay"></div>
-                    <h2>Project-4</h2>
+                <div class="card" id="card2">
+                    <div class="card-header">
+                        <h2>Dev Discuss</h2>
+                        <span id="closeCard" class="close-btn">&times;</span>
+                    </div>
+
+                    <div class="card-body">
+                        <img src="path/to/your/image.png">
+                        <p>
+                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                        </p>
+                        <div class="features">
+                            <span>Authentication</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="tags">
+                            <span class="tag">Next Js</span>
+                        </div>
+                        <div class="actions">
+                            <a href="https://github.com" class="btn github">Github</a>
+                            <a href="#" class="btn tour">Take a tour</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="elem"
-                    data-image="#">
+
+                <div id="elem3" class="elem">
                     <div class="overlay"></div>
-                    <h2>Project-5</h2>
+                    <h2 id="showCard">Personal Portfolio Website</h2>
                 </div>
-                <div class="elem"
-                    data-image="#">
-                    <div class="overlay"></div>
-                    <h2>Project-6</h2>
+                <div class="card" id="card3">
+                    <div class="card-header">
+                        <h2>Dev Discuss</h2>
+                        <span id="closeCard" class="close-btn">&times;</span>
+                    </div>
+                    <div class="card-body">
+                        <img src="path/to/your/image.png">
+                        <p>
+                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                        </p>
+                        <div class="features">
+                            <span>Authentication</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="tags">
+                            <span class="tag">Next Js</span>
+                        </div>
+                        <div class="actions">
+                            <a href="https://github.com" class="btn github">Github</a>
+                            <a href="#" class="btn tour">Take a tour</a>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="elem"
-                    data-image="#">
+
+                <div id="elem4" class="elem">
                     <div class="overlay"></div>
-                    <h2>Project-7</h2>
+                    <h2 id="showCard">Personal Portfolio Website</h2>
+                </div>
+                <div class="card" id="card4">
+                    <div class="card-header">
+                        <h2>Dev Discuss</h2>
+                        <span id="closeCard" class="close-btn">&times;</span>
+                    </div>
+                    <div class="card-body">
+                        <img src="path/to/your/image.png">
+                        <p>
+                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                        </p>
+                        <div class="features">
+                            <span>Authentication</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <div class="tags">
+                            <span class="tag">Next Js</span>
+                        </div>
+                        <div class="actions">
+                            <a href="https://github.com" class="btn github">Github</a>
+                            <a href="#" class="btn tour">Take a tour</a>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -171,15 +260,15 @@
                     <div class="div4-content">
                         <div id="div4-left">
                             <ul>
-                                <li>Html5</li>
+                                <li>Html5 / CSS3</li>
                                 <li>JavaScript</li>
-                                <li>Java</li>
+                                <li>TypeScript</li>
                             </ul>
                         </div>
                         <div id="div4-right">
                             <ul>
+                                <li>Java</li>
                                 <li>C</li>
-                                <li>C++</li>
                                 <li>Python</li>
                             </ul>
                         </div>
@@ -189,29 +278,46 @@
                 <div id="div5" class="gridCell div5">
                     <h2>Styling Tools</h2>
                     <div class="div5-content">
-                        <ul>
-                            <li>CSS</li>
-                            <li>TailWind CSS</li>
-                            <li>Material UI</li>
-                        </ul>
+                        <div id="div5-left">
+                            <ul>
+                                <li>CSS</li>
+                                <li>Tailwind CSS</li>
+                                <li>Post CSS</li>
+                            </ul>
+                        </div>
+                        <div id="div5-right">
+                            <ul>
+                                <li>Shadcn UI</li>
+                                <li>Figma</li>
+                                <li>Adobe Illustrator</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
-                <div class="div6 gridCell">
-                    <h2></h2>
+                <div id="div6" class="gridCell div6">
+                    <h2>Libraries & Frameworks</h2>
+                    <div class="div6-content">
+                            <ul>
+                                <li>React.js</li>
+                                <li>Next.js</li>
+                            </ul>
+                    </div>
                 </div>
 
-                <div class="div7 gridCell flexCol">
-                    <h2></h2>
-                    <p></p>
+                <div id="div7" class="gridCell div7">
+                    <h2>Development Tools</h2>
+                    <div class="div7-content">
+                            <ul>
+                                <li>VS Code</li>
+                                <li>GIT/Github</li>
+                                <li>Vercel</li>
+                            </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
-
-        <div id="page5">
-
-        </div>
         <div id="full-scr">
             <div id="full-div1"></div>
         </div>
