contact form structure done.

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <a href="https://www.linkedin.com/in/debaleena2003/" target="_blank">
                             <ion-icon name="logo-linkedin"></ion-icon>
                         </a>
-                        <a href="https://www.instagram.com/debaleena___/" target="_blank">
+                        <a href="https://www.instagram.com/des.ignsyndrome/" target="_blank">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
-                        <a href="https://twitter.com/DebaleenaBasu" target="_blank">
+                        <a href="https://x.com/DebaleenaBasu" target="_blank">
                             <ion-icon name="logo-twitter"></ion-icon>
                         </a>
                         <a href="https://www.behance.net/debaleenabasu" target="_blank">
@@ -135,7 +135,6 @@
                     </div>
 
                     <div class="card-body">
-                        <img src="path/to/your/image.png">
                         <p>
                         This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
                         </p>
@@ -326,7 +325,8 @@
             </div>
         </div>
 
-        <div id="page5"></div>
+        <div id="page5">
+        </div>
         <div id="full-scr">
             <div id="full-div1"></div>
         </div>
@@ -334,9 +334,32 @@
 
     <div id="footer">
         <div id="footer-div">
+            <div class="contact-container">
+                <h1>HAVE AN IDEA?</h1>
+                <p>Drop me a hi:</p>
+                <div id="footer-links">
+                    <a href="https://github.com/Debaleena84" target="_blank">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                    <a href="https://www.linkedin.com/in/debaleena2003/" target="_blank">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                    <a href="https://www.instagram.com/des.ignsyndrome/" target="_blank">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                    <a href="https://x.com/DebaleenaBasu" target="_blank">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
+                    <a href="https://www.behance.net/debaleenabasu" target="_blank">
+                        <ion-icon name="logo-behance"></ion-icon>
+                    </a>
+                </div>
+            </div>
         </div>
-        <h1>Sundown</h1>
         <div id="footer-bottom">
+            <div id="whom">WEBSITE BY: OZGE KELES</div>
+            <div id="what">Portfolio Vol1</div>
+            <div id="when">©2024</div>
         </div>
     </div>
 
