finalised footer section.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Debaleena Basu</title>
 
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -325,19 +326,21 @@
             </div>
         </div>
 
-        <div id="page5">
-        </div>
-
         <div id="full-scr">
             <div id="full-div1"></div>
         </div>
     </div>
 
     <div id="footer">
+        <div id="footer-top">
+            <div id="tagline">Open for offers and collaborations  —</div>
+            <div id="what">Portfolio Vol1</div>
+        </div>
         <div id="footer-div">
             <div class="contact-container">
                 <h1>HAVE AN IDEA?</h1>
-                <p>Drop me a hi:</p>
+                <p>Drop me an email:</p>
+                <div id="email"><a href="mailto:des.debaleenabasu@gmail.com">DES.DEBALEENABASU@GMAIL.COM</a></div>
                 <div id="footer-links">
                     <a href="https://github.com/Debaleena84" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
@@ -358,17 +361,18 @@
             </div>
         </div>
         <div id="footer-bottom">
-            <div id="whom">WEBSITE BY: OZGE KELES</div>
-            <div id="what">Portfolio Vol1</div>
-            <div id="when">©2024</div>
+            <div id="whom">DESIGNED , DEVELOPED & DEPLOYED WITH <ion-icon name="heart-sharp"></ion-icon> BY : DEBALEENA BASU</div>
+            <div id="when">©2024 All Rights Reserved</div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="script.js"></script>
+    
 </body>
-
 </html>
+
+
