refined header and about sections.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div id="page1">
             <nav>
                 <div id="nav-content">
-                    <h4><a href="#page2">About</a></h4>
+                    <h4><a href="#page2-bottom">About</a></h4>
                     <h4><a href="#page3">Projects</a></h4>
                     <h4><a href="#page4">Skills</a></h4>
-                    <h4><a href="#page5">Contact</a></h4>
+                    <h4><a href="#footer">Contact</a></h4>
                 </div>
                 <h3>Menu</h3>
             </nav>
@@ -38,8 +38,10 @@
             <div id="center">
                 <div id="left">
                     <h2>Debaleena Basu</h2>
-                    <h5>Front-End Web Developer | Web Designer | UI Designer</h5>
-                    <h3>I build pixel perfect, accessible and inclusive digital experiences.</h3>
+                    <h5>Front-End Web Developer | <ion-icon name="logo-html5"></ion-icon><ion-icon name="logo-css3">
+                        </ion-icon> <ion-icon name="logo-javascript"></ion-icon><ion-icon name="logo-react">
+                        </ion-icon><ion-icon name="logo-figma"></ion-icon>| Designer</h5>
+                    <h3>I build pixel perfect, accessible & inclusive digital experiences.</h3>
                     <div id="links">
                         <a href="https://github.com/Debaleena84" target="_blank">
                             <ion-icon name="logo-github"></ion-icon>
@@ -57,7 +59,7 @@
                             <ion-icon name="logo-behance"></ion-icon>
                         </a>
                     </div>
-                    <h4><a href="#">Download my CV</a></h4>
+                    <h4><a href="https://drive.google.com/file/d/1MC3ZyvdzSk3n6zxANRau37KnmVfgSJmw/view?usp=sharing" target="_blank">Download my CV</a></h4>
                 </div>
                 <div id="right">
                     <h1>DESIGNS<br>
@@ -126,12 +128,11 @@
                 <div id="elem1" class="elem"
                 data-image="#">
                     <div class="overlay"></div>
-                    <h2 id="showCard">Personal Portfolio Website</h2>
-                    <h4>+</h4>
+                    <h2 id="showCard">Interactive Personal Portfolio Website</h2>
                 </div>
                 <div class="card" id="card1">
                     <div class="card-header">
-                        <h2>Dev Discuss</h2>
+                        <h2>Portfolio Website</h2>
                         <span id="closeCard" class="close-btn">&times;</span>
                     </div>
 
