--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                     <div class="card-body">
                         <p>
-                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                        This personal portfolio website developed with HTML5, CSS3, Vanilla JavaScript and Swiper.js is designed to showcase my personal projects, skills and experiences, combining modern web technologies with creative design to create an engaging and professional online presence. It includes features like Responsive Design, Interactive Elements, Project Showcase, Smooth Scrolling, Social Media Links and Downloadable CV. 
                         </p>
                         <div class="features">
                             <span>Authentication</span>
@@ -334,7 +334,7 @@
 
     <div id="footer">
         <div id="footer-top">
-            <div id="tagline">Open for offers and collaborations  —</div>
+            <div id="tagline">Open for collaborations  —</div>
             <div id="what">Portfolio Vol1</div>
         </div>
         <div id="footer-div">
