--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                 <div id="elem1" class="elem"
                 data-image="#">
                     <div class="overlay"></div>
-                    <h2 id="showCard">Interactive Personal Portfolio Website</h2>
+                    <h2 id="showCard">personal portfolio website</h2>
+                    <h4>+</h4>
                 </div>
                 <div class="card" id="card1">
                     <div class="card-header">
@@ -138,19 +139,19 @@
 
                     <div class="card-body">
                         <p>
-                        This personal portfolio website developed with HTML5, CSS3, Vanilla JavaScript and Swiper.js is designed to showcase my personal projects, skills and experiences, combining modern web technologies with creative design to create an engaging and professional online presence. It includes features like Responsive Design, Interactive Elements, Project Showcase, Smooth Scrolling, Social Media Links and Downloadable CV. 
+                            This personal portfolio website is a visually captivating and interactive project built using HTML, CSS, and JavaScript. The design features a clean and modern aesthetic, with a focus on smooth scrolling and engaging animations that enhance the user experience. The website showcases the background, skills, and projects that I've undertaken in an organized manner. Key features include a responsive layout, a fixed image that reacts to user interaction, a card-based project display with details and links, and a comprehensive skills section highlighting the technical proficiencies. The project is built using HTML5, CSS3, Vanilla JavaScript, and libraries like Swiper.js and Locomotive Scroll for the interactive elements. Techniques like CSS animations, gradient backgrounds, and icon usage are implemented to create a cohesive portfolio website. 
                         </p>
                         <div class="features">
-                            <span>Authentication</span>
+                            <span>Responsive Design</span><span>•</span><span>Interactive Elements & Animations</span><span>•</span><span>Project Showcase</span><span>•</span><span>Smooth Scrolling</span><span>•</span><span>Social Media Links</span>
                         </div>
                     </div>
                     <div class="card-footer">
                         <div class="tags">
-                            <span class="tag">Next Js</span>
+                            <span class="tag">HTML5</span><span class="tag">CSS3</span><span class="tag">JavaScript (Vanilla)</span><span class="tag">Swiper.js</span><span class="tag">Locomotive Scroll</span>
+                            <span class="tag">VS Code</span><span class="tag">GIT/GitHub</span>
                         </div>
                         <div class="actions">
-                            <a href="https://github.com" class="btn github">Github</a>
-                            <a href="#" class="btn tour">Take a tour</a>
+                            <a href="https://github.com/Debaleena84/DIV-personal-portfolio-website-ongoing.git" target="_blank" class="btn github">Github</a>
                         </div>
                     </div>
 
@@ -160,30 +161,29 @@
                 <div id="elem2" class="elem"
                 data-image="#">
                     <div class="overlay"></div>
-                    <h2 id="showCard">Personal Portfolio Website</h2>
+                    <h2 id="showCard">inlink: ai-crafted content generator</h2>
                     <h4>+</h4>
                 </div>
                 <div class="card" id="card2">
                     <div class="card-header">
-                        <h2>Dev Discuss</h2>
+                        <h2>inlink - (under development)</h2>
                         <span id="closeCard" class="close-btn">&times;</span>
                     </div>
 
                     <div class="card-body">
-                        <img src="path/to/your/image.png">
                         <p>
-                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                            Our platform, built with Next.js on top of TypeScript for the front-end, and utilizing Shadcn UI for styling and interface design, is designed to revolutionize content creation. By integrating generative AI with Next.js, we offer a powerful tool that assists users in crafting professional and engaging content for LinkedIn and Twitter bios/posts, based on their inputs. This key feature ensures that users can effortlessly generate high-quality content that enhances their online presence and engagement.
                         </p>
                         <div class="features">
-                            <span>Authentication</span>
+                            <span>AI</span><span>•</span><span>Professional Content Generation</span><span>•</span><span>User Input-Based Customization</span>
                         </div>
                     </div>
                     <div class="card-footer">
                         <div class="tags">
-                            <span class="tag">Next Js</span>
+                            <span class="tag">Next Js</span><span class="tag">TypeScript</span><span class="tag">Shadcn UI</span>
                         </div>
                         <div class="actions">
-                            <a href="https://github.com" class="btn github">Github</a>
+                            <a href="https://github.com/amaan-bhati/buildspace-ai-content-generator.git" target="_blank" class="btn github">Github</a>
                             <a href="#" class="btn tour">Take a tour</a>
                         </div>
                     </div>
@@ -192,30 +192,29 @@
                 <div id="elem3" class="elem"
                 data-image="#">
                     <div class="overlay"></div>
-                    <h2 id="showCard">Personal Portfolio Website</h2>
+                    <h2 id="showCard">gpt-3 powered website</h2>
                     <h4>+</h4>
                 </div>
                 <div class="card" id="card3">
                     <div class="card-header">
-                        <h2>Dev Discuss</h2>
+                        <h2>GPT-3 Powered Website</h2>
                         <span id="closeCard" class="close-btn">&times;</span>
                     </div>
                     <div class="card-body">
-                        <img src="path/to/your/image.png">
                         <p>
-                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                            This project is a fully responsive website built from scratch using React JS, showcasing the capabilities of GPT-3, the groundbreaking language model developed by OpenAI. The website features a clean and modern design, with a focus on highlighting the diverse applications and potential of GPT-3. The codebase includes various components, such as a feature-rich navbar, interactive sections highlighting GPT-3's abilities in areas like chatbots, knowledge bases, and educational applications, as well as a visually appealing blog section displaying articles related to GPT-3 and its advancements.
                         </p>
                         <div class="features">
-                            <span>Authentication</span>
+                            <span>Responsive & mobile-friendly design</span><span>•</span><span>Seamless integration of GPT-3 capabilities throughout the website</span><span>•</span><span>Informative sections showcasing the versatility of GPT-3</span><span>•</span><span>Engaging blog section with relevant articles</span><span>•</span><span>Smooth user experience and interactive components</span>
                         </div>
                     </div>
                     <div class="card-footer">
                         <div class="tags">
-                            <span class="tag">Next Js</span>
+                            <span class="tag">React JS</span><span class="tag">HTML5</span><span class="tag">CSS3</span><span class="tag">JavaScript</span><span class="tag">GIT/GitHub</span>
                         </div>
                         <div class="actions">
-                            <a href="https://github.com" class="btn github">Github</a>
-                            <a href="#" class="btn tour">Take a tour</a>
+                            <a href="https://github.com/Debaleena84/gpt3-powered-website-react.js.git" target="_blank" class="btn github">Github</a>
+                            <a href="https://gpt3-powered-website.vercel.app/" target="_blank" class="btn tour">Take a tour</a>
                         </div>
                     </div>
 
@@ -223,32 +222,32 @@
                 </div>
 
                 <div id="elem4" class="elem"
-                >
+                data-image="#">
                     <div class="overlay"></div>
-                    <h2 id="showCard">Personal Portfolio Website</h2>
+                    <h2 id="showCard">landing page clone</h2>
                     <h4>+</h4>
                 </div>
                 <div class="card" id="card4">
                     <div class="card-header">
-                        <h2>Dev Discuss</h2>
+                        <h2>Portfolio Landing Page Clone</h2>
                         <span id="closeCard" class="close-btn">&times;</span>
                     </div>
                     <div class="card-body">
-                        <img src="path/to/your/image.png">
                         <p>
-                        This platform developed with Next Js 13.5, Shadcn/Ui helps developers to ask question, post answers, and even generate answers to their questions, alongwith voting system for questions asked, helping to build user profile and get badges. It includes features like google, email authentication system with Clerk, code formatting, generating an AI answer, connecting and building like minded community (under development), finding jobs and even more.
+                            The project is a landing page clone of an Awwwards-winning portfolio website designed by Nataschavavrina. The page is built using HTML5, CSS3, and JavaScript, and features a visually striking layout with a central logo and images that respond dynamically to user interactions. The page utilizes document.querySelector() to manipulate the DOM and create hover animations, as well as CSS transitions and transforms to achieve the desired visual effects. The project demonstrates proficiency in front-end web development techniques and a keen eye for design.
                         </p>
                         <div class="features">
-                            <span>Authentication</span>
+                            <span>Responsive & interactive layout</span><span>•</span><span>Hover animations triggered by mouse movement</span>
+                            <span>•</span><span>Dynamic resizing & positioning of images</span><span>•</span><span>Smooth transitions & visual effects</span>
                         </div>
                     </div>
                     <div class="card-footer">
                         <div class="tags">
-                            <span class="tag">Next Js</span>
+                            <span class="tag">HTML5</span><span class="tag">CSS3</span><span class="tag">JavaScript</span><span class="tag">Document Object Model (DOM) manipulation</span><span class="tag">GIT/GitHub</span>
                         </div>
                         <div class="actions">
-                            <a href="https://github.com" class="btn github">Github</a>
-                            <a href="#" class="btn tour">Take a tour</a>
+                            <a href="https://github.com/Debaleena84/portfolio-landing-page-clone.git" target="_blank" class="btn github">Github</a>
+                            <a href="https://nataschavavrina-clone.netlify.app/" target="_blank" class="btn tour">Take a tour</a>
                         </div>
                     </div>
 
