fixed image issue resolved.

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
             </div>
 
             <div id="elem-container">
-                <div id="elem1" class="elem"
-                data-image="#">
+                <div id="elem1" class="elem">
                     <div class="overlay"></div>
                     <h2 id="showCard">personal portfolio website</h2>
                     <h4>+</h4>
@@ -158,8 +157,7 @@
 
                 </div>
 
-                <div id="elem2" class="elem"
-                data-image="#">
+                <div id="elem2" class="elem">
                     <div class="overlay"></div>
                     <h2 id="showCard">inlink: ai-crafted content generator</h2>
                     <h4>+</h4>
@@ -189,8 +187,7 @@
                     </div>
                 </div>
 
-                <div id="elem3" class="elem"
-                data-image="#">
+                <div id="elem3" class="elem">
                     <div class="overlay"></div>
                     <h2 id="showCard">gpt-3 powered website</h2>
                     <h4>+</h4>
@@ -221,8 +218,7 @@
 
                 </div>
 
-                <div id="elem4" class="elem"
-                data-image="#">
+                <div id="elem4" class="elem">
                     <div class="overlay"></div>
                     <h2 id="showCard">landing page clone</h2>
                     <h4>+</h4>
