finalised skills section.

--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
                             <ul>
                                 <li>Shadcn UI</li>
                                 <li>Figma</li>
-                                <li>Adobe Illustrator</li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div id="div6" class="gridCell div6">
-                    <h2>Libraries & Frameworks</h2>
+                    <h2>Libraries/Frameworks</h2>
                     <div class="div6-content">
                             <ul>
-                                <li>React.js</li>
-                                <li>Next.js</li>
+                                <li>React Js</li>
+                                <li>Next Js</li>
+                                <li>Vanilla Js</li>
                             </ul>
                     </div>
                 </div>
