--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
             </div>
         </div>
 
-        <div id="full-scr">
+        <!--<div id="full-scr">
             <div id="full-div1"></div>
-        </div>
+        </div>-->
     </div>
 
     <div id="footer">
