changed the styling of skills section completely.

--- a/index.html
+++ b/index.html
@@ -256,65 +256,43 @@
                 <div id="red-dot"></div>
                 <h6 id="title">Skills</h6>
             </div>
-            <div class="grid">
-                <div id="div4" class="gridCell div4">
-                    <h2>Languages</h2>
-                    <div class="div4-content">
-                        <div id="div4-left">
-                            <ul>
-                                <li>Html5 / CSS3</li>
-                                <li>JavaScript</li>
-                                <li>TypeScript</li>
-                            </ul>
-                        </div>
-                        <div id="div4-right">
-                            <ul>
-                                <li>Java</li>
-                                <li>C</li>
-                                <li>Python</li>
-                            </ul>
-                        </div>
+            <div class="container">
+                <div class="box">
+                    <h3>&lt;languages/&gt;</h3>
+                    <div class="skillstags">
+                        <span class="skillstag">Html5 / CSS3</span>
+                        <span class="skillstag">JavaScript</span>
+                        <span class="skillstag">TypeScript</span>
+                        <span class="skillstag">Java</span>
+                        <span class="skillstag">C</span>
+                        <span class="skillstag">Python</span>
                     </div>
                 </div>
-
-                <div id="div5" class="gridCell div5">
-                    <h2>Styling Tools</h2>
-                    <div class="div5-content">
-                        <div id="div5-left">
-                            <ul>
-                                <li>CSS</li>
-                                <li>Tailwind CSS</li>
-                                <li>Post CSS</li>
-                            </ul>
-                        </div>
-                        <div id="div5-right">
-                            <ul>
-                                <li>Shadcn UI</li>
-                                <li>Figma</li>
-                            </ul>
-                        </div>
+                <div class="box">
+                    <h3>&lt;development tools/&gt;</h3>
+                    <div class="skillstags">
+                        <span class="skillstag">VS Code</span>
+                        <span class="skillstag">GIT/GitHub</span>
+                        <span class="skillstag">Vercel</span>
                     </div>
                 </div>
-
-                <div id="div6" class="gridCell div6">
-                    <h2>Libraries/Frameworks</h2>
-                    <div class="div6-content">
-                            <ul>
-                                <li>React Js</li>
-                                <li>Next Js</li>
-                                <li>Vanilla Js</li>
-                            </ul>
+                <div class="box">
+                    <h3>&lt;libraries & frameworks/&gt;</h3>
+                    <div class="skillstags">
+                        <span class="skillstag">React Js</span>
+                        <span class="skillstag">Next Js</span>
+                        <span class="skillstag">Vanilla Js</span>
                     </div>
                 </div>
-
-                <div id="div7" class="gridCell div7">
-                    <h2>Development Tools</h2>
-                    <div class="div7-content">
-                            <ul>
-                                <li>VS Code</li>
-                                <li>GIT/Github</li>
-                                <li>Vercel</li>
-                            </ul>
+                <div class="box">
+                    <h3>&lt;styling tools/&gt;</h3>
+                    <div class="skillstags">
+                        <span class="skillstag">CSS</span>
+                        <span class="skillstag">Tailwind CSS</span>
+                        <span class="skillstag">Post CSS</span>
+                        <span class="skillstag">Shadcn UI</span>
+                        <span class="skillstag">Figma</span>
+                        <span class="skillstag">Adobe Illustrator</span>
                     </div>
                 </div>
             </div>
