small change in styling.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div id="center">
                 <div id="left">
                     <h2>Debaleena Basu</h2>
-                    <h5>Front-End Web Developer | <ion-icon name="logo-html5"></ion-icon><ion-icon name="logo-css3">
+                    <h5>&lt;front-end developer/&gt; &lt;<ion-icon name="logo-html5"></ion-icon><ion-icon name="logo-css3">
                         </ion-icon> <ion-icon name="logo-javascript"></ion-icon><ion-icon name="logo-react">
-                        </ion-icon><ion-icon name="logo-figma"></ion-icon>| Designer</h5>
+                        </ion-icon><ion-icon name="logo-figma"></ion-icon>/&gt; &lt;designer/&gt;</h5>
                     <h3>I build pixel perfect, accessible & inclusive digital experiences.</h3>
                     <div id="links">
                         <a href="https://github.com/Debaleena84" target="_blank">
@@ -298,9 +298,6 @@
             </div>
         </div>
 
-        <!--<div id="full-scr">
-            <div id="full-div1"></div>
-        </div>-->
     </div>
 
     <div id="footer">
