added hamburger menu with subtle animation.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div id="page1">
             <nav>
                 <div id="nav-content">
-                    <h4><a href="#page2-bottom">About</a></h4>
-                    <h4><a href="#page3">Projects</a></h4>
-                    <h4><a href="#page4">Skills</a></h4>
-                    <h4><a href="#footer">Contact</a></h4>
+                    <h4><a href="#page2-bottom">ABOUT</a></h4>
+                    <h4><a href="#page3">PROJECTS</a></h4>
+                    <h4><a href="#page4">SKILLS</a></h4>
+                    <h4><a href="#footer">CONTACT</a></h4>
                 </div>
-                <h3>Menu</h3>
+                <div class="menu-buttons">
+                    <h3 id="menu-button">Menu</h3>
+                    <h3 id="close-button" class="hidden">&times;</h3>
+                </div>
             </nav>
 
             <div id="center">
