--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <ion-icon name="logo-behance"></ion-icon>
                         </a>
                     </div>
-                    <h4><a href="https://drive.google.com/file/d/1MC3ZyvdzSk3n6zxANRau37KnmVfgSJmw/view?usp=sharing" target="_blank">Download my CV</a></h4>
+                    <h4><a href="https://drive.google.com/file/d/1MC3ZyvdzSk3n6zxANRau37KnmVfgSJmw/view?usp=sharing" target="_blank">DOWNLOAD MY CV</a></h4>
                 </div>
                 <div id="right">
                     <h1>DESIGNS<br>
