Added proper responsive styling for 768px.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h4><a href="#footer">CONTACT</a></h4>
                 </div>
                 <div class="menu-buttons">
-                    <h3 id="menu-button">Menu</h3>
+                    <h3 id="menu-button">MENU</h3>
                     <h3 id="close-button" class="hidden">&times;</h3>
                 </div>
             </nav>
